--- a/src/themes/basic/maps/_content.scss
+++ b/src/themes/basic/maps/_content.scss
@@ -1,8 +1,12 @@
 // BASIC THEME CONTENT COLOR MAP: This partial defines the basic theme's content color map.
 // - Map include content color scope tokens.
+// - Sort Order is by design similarities
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-content-colors: (
+        color-teal: $color-content-teal,
+        color-teal-hover: $color-content-teal-hover,
+        color-teal-selected: $color-content-teal-selected,
         color-grass_green: $color-content-grass_green,
         color-grass_green-hover: $color-content-grass_green-hover,
         color-grass_green-selected: $color-content-grass_green-selected,
@@ -48,12 +52,18 @@ $theme-basic-content-colors: (
         color-bubble: $color-content-bubble,
         color-bubble-hover: $color-content-bubble-hover,
         color-bubble-selected: $color-content-bubble-selected,
+        color-orchid: $color-content-orchid,
+        color-orchid-hover: $color-content-orchid-hover,
+        color-orchid-selected: $color-content-orchid-selected,
         color-purple: $color-content-purple,
         color-purple-hover: $color-content-purple-hover,
         color-purple-selected: $color-content-purple-selected,
         color-dark_purple: $color-content-dark_purple,
         color-dark_purple-hover: $color-content-dark_purple-hover,
         color-dark_purple-selected: $color-content-dark_purple-selected,
+        color-lavender: $color-content-lavender,
+        color-lavender-hover: $color-content-lavender-hover,
+        color-lavender-selected: $color-content-lavender-selected,
         color-berry: $color-content-berry,
         color-berry-hover: $color-content-berry-hover,
         color-berry-selected: $color-content-berry-selected,
@@ -63,21 +73,33 @@ $theme-basic-content-colors: (
         color-indigo: $color-content-indigo,
         color-indigo-hover: $color-content-indigo-hover,
         color-indigo-selected: $color-content-indigo-selected,
+        color-lilac: $color-content-lilac,
+        color-lilac-hover:$color-content-lilac-hover,
+        color-lilac-selected: $color-content-lilac-selected,
+        color-steel: $color-content-steel,
+        color-steel-hover: $color-content-steel-hover,
+        color-steel-selected: $color-content-steel-selected,
         color-navy: $color-content-navy,
         color-navy-hover: $color-content-navy-hover,
         color-navy-selected: $color-content-navy-selected,
+        color-royal: $color-content-royal,
+        color-royal-hover: $color-content-royal-hover,
+        color-royal-selected: $color-content-royal-selected,
         color-bright-blue: $color-content-bright-blue,
         color-bright-blue-hover: $color-content-bright-blue-hover,
         color-bright-blue-selected: $color-content-bright-blue-selected,
+        color-chili-blue: $color-content-chili-blue,
+        color-chili-blue-hover: $color-content-chili-blue-hover,
+        color-chili-blue-selected: $color-content-chili-blue-selected,
+        color-sky: $color-content-sky,
+        color-sky-hover: $color-content-sky-hover,
+        color-sky-selected: $color-content-sky-selected,
         color-dark-blue: $color-content-dark-blue,
         color-dark-blue-hover: $color-content-dark-blue-hover,
         color-dark-blue-selected: $color-content-dark-blue-selected,
         color-aquamarine: $color-content-aquamarine,
         color-aquamarine-hover: $color-content-aquamarine-hover,
         color-aquamarine-selected: $color-content-aquamarine-selected,
-        color-chili-blue: $color-content-chili-blue,
-        color-chili-blue-hover: $color-content-chili-blue-hover,
-        color-chili-blue-selected: $color-content-chili-blue-selected,
         color-river: $color-content-river,
         color-river-hover: $color-content-river-hover,
         color-river-selected: $color-content-river-selected,
@@ -93,37 +115,16 @@ $theme-basic-content-colors: (
         color-blackish: $color-content-blackish,
         color-blackish-hover: $color-content-blackish-hover,
         color-blackish-selected: $color-content-blackish-selected,
-        color-brown: $color-content-brown,
-        color-brown-hover: $color-content-brown-hover,
-        color-brown-selected: $color-content-brown-selected,
-        color-orchid: $color-content-orchid,
-        color-orchid-hover: $color-content-orchid-hover,
-        color-orchid-selected: $color-content-orchid-selected,
-        color-tan: $color-content-tan,
-        color-tan-hover: $color-content-tan-hover,
-        color-tan-selected: $color-content-tan-selected,
-        color-sky: $color-content-sky,
-        color-sky-hover: $color-content-sky-hover,
-        color-sky-selected: $color-content-sky-selected,
-        color-coffee: $color-content-coffee,
-        color-coffee-hover: $color-content-coffee-hover,
-        color-coffee-selected: $color-content-coffee-selected,
-        color-royal: $color-content-royal,
-        color-royal-hover: $color-content-royal-hover,
-        color-royal-selected: $color-content-royal-selected,
-        color-teal: $color-content-teal,
-        color-teal-hover: $color-content-teal-hover,
-        color-teal-selected: $color-content-teal-selected,
-        color-lavender: $color-content-lavender,
-        color-lavender-hover: $color-content-lavender-hover,
-        color-lavender-selected: $color-content-lavender-selected,
-        color-steel: $color-content-steel,
-        color-steel-hover: $color-content-steel-hover,
-        color-steel-selected: $color-content-steel-selected,
-        color-lilac: $color-content-lilac,
-        color-lilac-hover:$color-content-lilac-hover,
-        color-lilac-selected: $color-content-lilac-selected,
         color-pecan: $color-content-pecan,
         color-pecan-hover: $color-content-pecan-hover,
         color-pecan-selected: $color-content-pecan-selected,
+        color-brown: $color-content-brown,
+        color-brown-hover: $color-content-brown-hover,
+        color-brown-selected: $color-content-brown-selected,
+        color-coffee: $color-content-coffee,
+        color-coffee-hover: $color-content-coffee-hover,
+        color-coffee-selected: $color-content-coffee-selected,
+        color-tan: $color-content-tan,
+        color-tan-hover: $color-content-tan-hover,
+        color-tan-selected: $color-content-tan-selected,
 );
