--- a/src/themes/basic/tokens/colors/_base.scss
+++ b/src/themes/basic/tokens/colors/_base.scss
@@ -2,7 +2,7 @@
 // - This partial defines Basic Theme's base color tokens
 
 $color-basic_blue: #0073ea;
-$color-dark_blue: #0060b9;
+$color-dark_blue: #0060B9;
 $color-link_color: #1f76c2;
 $color-highlight_blue: #cce5ff;
 $color-highlight_blue-rgb: extract-rgb($color-highlight_blue);
