--- a/src/themes/dark/maps/theme-dark-shadows.scss
+++ b/src/themes/dark/maps/theme-dark-shadows.scss
@@ -1,8 +1,8 @@
-// BLACK THEME SHADOW MAP: This partial defines the black theme's shadow color map.
+// BASIC THEME SHADOW MAP: This partial defines the basic theme's shadow color map.
 // - Map include shadow scope tokens.
-// - Map is collected into the $theme-black-settings map and is interpolated into custom properties.
+// - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
-$theme-black-shadows: (
+$theme-dark-shadows: (
         box-shadow-small: $box-shadow-small,
         box-shadow-medium: $box-shadow-medium,
         box-shadow-large: $box-shadow-large,
