# Refactor Tokens: Hacker Theme completed, cleanups * Complete Hacker Theme * Sanity and cleanups on all themes * Remove Legacy Folder

--- a/src/themes/_theme-dark.scss
+++ b/src/themes/_theme-dark.scss
@@ -1,4 +1,5 @@
-// BLACK THEME: This partial loads BLACK THEME scope related Custom properties
+// DARK THEME: This partial loads DARK THEME scope related Custom properties
+// - TODO: Dark Theme experience Guidelines should be shortly described here
 // - Properties are Theme Specific and goes under a Theme Specific Class based Selectors.
 
 @import "dark/theme-dark-tokens";
