--- a/src/themes/basic/tokens/colors/_legacy.scss
+++ b/src/themes/basic/tokens/colors/_legacy.scss
@@ -18,7 +18,7 @@
 // - Sort by color similarity
 $color-dark_marble: #f1f1f1;
 $color-marble: #f7f7f7;
-$color-gainsboro: #e1e1e1;
+$color-gainsboro: #e1e1e1; // identical to $color-content-explosive-selected
 $color-extra_light_gray: #edeef0;
 $color-glitter: #d9f0ff;
 $color-ultra_light_gray: #ebebeb;
