--- a/src/themes/dark/_theme-dark-maps.scss
+++ b/src/themes/dark/_theme-dark-maps.scss
@@ -1,4 +1,4 @@
-// BASIC THEME Maps: This partial loads BASIC THEME scope Maps
+// DARK THEME Maps: This partial loads DARK THEME scope Maps
 // - Each map contains a token scope
 // - Maps are assigned with 'tokens' from the 'tokens' Scope
 
