--- a/src/themes/_theme-basic.scss
+++ b/src/themes/_theme-basic.scss
@@ -1,5 +1,7 @@
 // BASIC THEME: This partial loads BASIC THEME scope related Custom properties
 // - Properties are Theme Specific and goes under a Theme Specific Class based Selectors.
+// - We also use the ":root" selector, so Basic theme can cascade to other themes.
+//   - This way when a custom property is not defined in another theme, its definition i inherited from the ":root"
 
 @import "basic/theme-basic-tokens";
 @import "basic/theme-basic-maps";
