--- a/src/themes/dark/_theme-dark-tokens.scss
+++ b/src/themes/dark/_theme-dark-tokens.scss
@@ -1,4 +1,4 @@
-// BASIC THEME TOKENS: This partial loads BASIC THEME scope tokens.
+// DARK THEME TOKENS: This partial loads DARK THEME scope tokens.
 
 @import "tokens/theme-dark-colors";
 @import "tokens/theme-dark-styles";
