# ♻️ Refactor Tokens: CORE restructure * Create Core structure based on hierarchy and scope. * Create Core Tokens based on scopes. * Create Core Maps based on scopes, using tokens as values. * Create Functions: extract rgb, map-collect. * Create Mixins: generate-custom-properties. * Generate Core custom properties from core-settings-map. * Remove Core legacy file duplications. * Fix themes shadows to include core shadow tokens.

--- a/src/Themes/basic-theme.scss
+++ b/src/Themes/basic-theme.scss
@@ -66,9 +66,9 @@
   --link-on-secondary-color: var(--color-link_color);
 
   // Shadows
-  --box-shadow-small: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  --box-shadow-medium: 0px 6px 20px rgba(0, 0, 0, 0.2);
-  --box-shadow-large: 0px 15px 50px rgba(0, 0, 0, 0.3);
+  --box-shadow-small: #{$shadow-size-small} rgba(0, 0, 0, #{$shadow-small-opacity});
+  --box-shadow-medium: #{$shadow-size-medium} rgba(0, 0, 0, #{$shadow-medium-opacity});
+  --box-shadow-large: #{$shadow-size-large} rgba(0, 0, 0, #{$shadow-large-opacity});
   // legacy
-  --box-shadow-mediun: 0px 6px 20px rgba(0, 0, 0, 0.2);
+  --box-shadow-mediun: var(--box-shadow-medium);
 }
