--- a/src/Themes/hacker-theme.scss
+++ b/src/Themes/hacker-theme.scss
@@ -272,10 +272,9 @@ $primary_color: #fe78c6;
   --color-pecan-selected: #433939;
 
   // Shadows
-  --box-shadow-small: 0px 4px 8px #000000;
-  --box-shadow-medium: 0px 6px 20px #000000;
-  --box-shadow-large: 0px 15px 50px #000000;
+  --box-shadow-small: #{$shadow-size-small} #000000;
+  --box-shadow-medium: #{$shadow-size-medium} #000000;
+  --box-shadow-large: #{$shadow-size-large} #000000;
   // Legacy
-  --box-shadow-mediun: 0px 6px 20px #000000;
-
+  --box-shadow-mediun: var(--box-shadow-medium);
 }
