--- a/src/Themes/black-theme.scss
+++ b/src/Themes/black-theme.scss
@@ -265,9 +265,9 @@
   --color-pecan-selected: #433939;
 
   // Shadows
-  --box-shadow-small: #{$shadow-size-small} #000000;
-  --box-shadow-medium: #{$shadow-size-medium} #000000;
-  --box-shadow-large: #{$shadow-size-large} #000000;
+  --box-shadow-small: 0px 4px 8px #000000;
+  --box-shadow-medium: 0px 6px 20px #000000;
+  --box-shadow-large: 0px 15px 50px #000000;
   // legacy
-  --box-shadow-mediun: var(--box-shadow-medium);
+  --box-shadow-mediun: 0px 6px 20px #000000;
 }
