# ♻️ Refactor Tokens: Fix border map name to $core-border-radius-map

--- a/src/core/_core-settings.scss
+++ b/src/core/_core-settings.scss
@@ -8,7 +8,7 @@ $core-settings-map: map-collect(
                 $core-font-size-scale-map,
                 $core-font-line-height-scale-map,
                 $core-motion-map,
-                $core-radius-map,
+                $core-border-radius-map,
                 $core-spacing-map,
                 $core-typography-font-sizes-map,
                 $core-typography-line-height-sizes-map,
