--- a/src/core/maps/_core-radius-map.scss
+++ b/src/core/maps/_core-radius-map.scss
@@ -3,7 +3,7 @@
 // - Map includes border radius scope tokens.
 // - Map is collected into the $core-settings-map and is interpolated into custom properties.
 
-$core-radius-map: (
+$core-border-radius-map: (
         border-radius-small: $border-radius-small,
         border-radius-medium: $border-radius-medium,
         border-radius-big: $border-radius-big,
