--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -6,7 +6,7 @@
 //   - Dark
 //   - Hacker
 
-@import "themes/basic-theme.scss";
-@import "themes/dark-theme.scss";
-@import "themes/black-theme.scss";
-@import "themes/hacker-theme.scss";
+@import "Themes/basic-theme.scss";
+@import "Themes/dark-theme.scss";
+@import "Themes/black-theme.scss";
+@import "Themes/hacker-theme.scss";
