--- a/src/themes/basic/tokens/colors/_keys.scss
+++ b/src/themes/basic/tokens/colors/_keys.scss
@@ -8,29 +8,34 @@
 // - When several key has the same value and have a connection
 // - We either use $token or var(--token) depending on connection logic and value type.
 
-// primary coloring
+// # Figma approved
+// Text colors
 $primary-color: var(--color-basic_blue);
-$primary-on-secondary-color: var(--color-basic_blue);
 $primary-hover-color: var(--color-dark_blue);
-$primary-hover-on-secondary-color: var(--color-dark_blue);
 $primary-selected-color: var(--color-highlight_blue);
-$primary-selected-color-rgb: var(--color-highlight_blue-rgb);
-$primary-selected-on-secondary-color: var(--color-highlight_blue);
 $primary-text-color: var(--color-mud_black);
-$primary-text-on-secondary-color: var(--color-mud_black);
-$text-color-on-primary: var(--color-snow_white);
-$text-color-on-primary-with-opacity: var(--color-snow_white-with-opacity);
-$primary-background-color: var(--color-snow_white);
-$primary-background-color-rgb: var(--color-snow_white-rgb);
-$primary-background-hover-color: var(--color-ui_grey);
-$primary-background-hover-on-secondary-color: var(--color-ui_grey);
-$grey-background-color: var(--color-riverstone_gray);
-$modal-background-color: var(--color-snow_white);
 
-$inverted-color-background: var(--color-mud_black);
+$text-color-on-primary: var(--color-snow_white);
 $text-color-on-inverted: var(--color-snow_white);
 
-// states
+$secondary-text-color: var(--color-asphalt);
+$placeholder-color: var(--color-asphalt);
+$icon-color: var(--color-asphalt);
+
+$link-color: var(--color-link_color);
+
+// Background colors
+$primary-background-color: var(--color-snow_white);
+$primary-background-hover-color: var(--color-ui_grey);
+$secondary-background-color: var(--color-snow_white);
+$grey-background-color: var(--color-riverstone_gray);
+// - dark /black themes
+$inverted-color-background: var(--color-mud_black);
+
+// System Semantics (state, status)
+$disabled-text-color: var(--color-asphalt);
+$disabled-background-color: var(--color-ui_grey);
+
 $positive-color: var(--color-success);
 $positive-color-hover: var(--color-success-hover);
 $positive-color-selected: var(--color-success-highlight);
@@ -40,35 +45,44 @@ $negative-color-selected: var(--color-error-highlight);
 $private-color: var(--color-private);
 $shareable-color: var(--color-purple);
 
-// borders
+// UI elements
+// - borders
 $ui-border-color: var(--color-wolf_gray);
-$ui-border-on-secondary-color: var(--color-wolf_gray);
 $layout-border-color: #d0d4e4; // Todo: TBD, should be - var(--color-ui_grey)
-$layout-border-on-secondary-color: $layout-border-color;
 
-$placeholder-color: var(--color-asphalt);
-$placeholder-color-with-opacity: var(--color-asphalt-with-opacity);
-$placeholder-on-secondary-color: var(--color-asphalt);
-$icon-color: var(--color-asphalt);
-$icon-on-secondary-color: var(--color-asphalt);
+// # Not in Figma
+$primary-on-secondary-color: var(--color-basic_blue);
+$primary-hover-on-secondary-color: var(--color-dark_blue);
+$primary-selected-color-rgb: var(--color-highlight_blue-rgb);
+$primary-selected-on-secondary-color: var(--color-highlight_blue);
+$primary-text-on-secondary-color: var(--color-mud_black);
+$text-color-on-primary-with-opacity: var(--color-snow_white-with-opacity);
 
-// disabled
-$disabled-background-color: var(--color-ui_grey);
-$disabled-background-on-secondary-color: var(--color-ui_grey);
-$disabled-text-color: var(--color-asphalt);
-$disabled-text-on-secondary-color: $disabled-text-color;
+$primary-background-color-rgb: $color-snow_white-rgb;
+$primary-background-hover-on-secondary-color: var(--color-ui_grey);
+$secondary-background-color-rgb: $color-snow_white-rgb;
 
+$secondary-text-on-secondary-color: var(--color-asphalt);
+$link-on-secondary-color: var(--color-link_color);
+
+$modal-background-color: var(--color-snow_white);
 $dark-background-color: var(--color-riverstone_gray);
 $dark-background-on-secondary-color: var(--color-riverstone_gray);
-$secondary-background-color: var(--color-snow_white);
-$secondary-background-color-rgb: var(--color-snow_white-rgb);
-
-//deprecated - use secondary-background-color
 $dialog-background-color: var(--color-snow_white);
 
 $label-background-color: var(--color-highlight_blue);
 $label-background-on-secondary-color: var(--color-highlight_blue);
-$secondary-text-color: var(--color-asphalt);
-$secondary-text-on-secondary-color: var(--color-asphalt);
-$link-color: var(--color-link_color);
-$link-on-secondary-color: var(--color-link_color);
+
+$icon-on-secondary-color: var(--color-asphalt);
+$placeholder-color-with-opacity: var(--color-asphalt-with-opacity);
+$placeholder-on-secondary-color: var(--color-asphalt);
+
+// States
+$disabled-background-on-secondary-color: var(--color-ui_grey);
+$disabled-text-on-secondary-color: $disabled-text-color;
+
+
+
+// borders
+$ui-border-on-secondary-color: var(--color-wolf_gray);
+$layout-border-on-secondary-color: $layout-border-color;
