# Update disabled states tokens - Add opacity-40 with 0.4 value to opacity registration tokens. - Add "disabled-component-opacity" token. - Add Basic token: --color-asphalt-muted - Add Basic token:--color-ui_grey-muted - Change values for:  --disabled-background-color  --disabled-background-on-secondary-color  --disabled-text-color  --disabled-text-on-secondary-color  - Hard code changes in dark , black and hacker theme. (per current convention)

--- a/src/Themes/basic-theme.scss
+++ b/src/Themes/basic-theme.scss
@@ -46,10 +46,10 @@
   --icon-on-secondary-color: var(--color-asphalt);
 
   // disabled
-  --disabled-background-color: var(--color-ui_grey);
-  --disabled-background-on-secondary-color: var(--color-ui_grey);
-  --disabled-text-color: #676879;
-  --disabled-text-on-secondary-color: #676879;
+  --disabled-background-color: var(--color-ui_grey-muted);
+  --disabled-background-on-secondary-color: var(--color-ui_grey-muted);
+  --disabled-text-color: var(--color-asphalt-muted);
+  --disabled-text-on-secondary-color: var(--color-asphalt-muted);
 
   --dark-background-color: var(--color-riverstone_gray);
   --dark-background-on-secondary-color: var(--color-riverstone_gray);
