--- a/src/Themes/black-theme.scss
+++ b/src/Themes/black-theme.scss
@@ -43,10 +43,10 @@
   --icon-on-secondary-color: #aaaaaa;
 
   // disabled
-  --disabled-background-color: #636363;
-  --disabled-background-on-secondary-color: #636363;
-  --disabled-text-color: #aaaaaa;
-  --disabled-text-on-secondary-color: #aaaaaa;
+  --disabled-background-color: #3a3a3a;
+  --disabled-background-on-secondary-color: #3a3a3a;
+  --disabled-text-color: #5d5d5d;
+  --disabled-text-on-secondary-color: #5d5d5d;
 
   --dark-background-color: #2c2c2c;
   --dark-background-on-secondary-color: #4b4e69;
