--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,6 +2,7 @@
 .light-app-theme,
 .default-app-theme {
   --color-asphalt: #676879;
+  --color-asphalt-muted: #bdbec7;
   --color-asphalt-with-opacity: rgba(103, 104, 121, 0.1);
   --color-light_blue: #61caf7;
   --color-basic_blue: #0073ea;
@@ -82,6 +83,7 @@
   --color-storm_gray: #6b6d77;
   --color-riverstone_gray: #f6f7fb;
   --color-ui_grey: #dcdfec;
+  --color-ui_grey-muted: #ecedf5;
   --color-border_light_gray: #f5f6f8;
   --color-like_red: #fb275d;
   --color-lime-green: #9cd326;
