--- a/src/core/_core-maps.scss
+++ b/src/core/_core-maps.scss
@@ -9,3 +9,5 @@
 @import "maps/core-shadows-map";
 @import "maps/core-spacing-map";
 @import "maps/core-typography-map";
+//
+@import "maps/core-common-map";
