--- a/src/core/_core-settings.scss
+++ b/src/core/_core-settings.scss
@@ -13,4 +13,5 @@ $core-settings-map: map-collect(
                 $core-typography-font-sizes-map,
                 $core-typography-line-height-sizes-map,
                 $core-typography-fonts-map,
+                $core-common-map
 );
