--- a/src/core/_core-tokens.scss
+++ b/src/core/_core-tokens.scss
@@ -9,3 +9,5 @@
 @import "tokens/core-shadows";
 @import "tokens/core-spacing";
 @import "tokens/core-typography";
+//
+@import "tokens/core-common";
