--- a/src/Themes/hacker-theme.scss
+++ b/src/Themes/hacker-theme.scss
@@ -51,8 +51,8 @@ $primary_color: #fe78c6;
   // disabled
   --disabled-background-color: #595959;
   --disabled-background-on-secondary-color: #595959;
-  --disabled-text-color: rgba(197, 199, 208, 0.75);
-  --disabled-text-on-secondary-color: rgba(197, 199, 208, 0.75);
+  --disabled-text-color: #5d6072;
+  --disabled-text-on-secondary-color: #5d6072;
 
   --dark-background-color: #303241;
   --dark-background-on-secondary-color: #595959;
